chore: Fix blog link, add some spacing

--- a/src/components/pages/about-data/data-summary.module.scss
+++ b/src/components/pages/about-data/data-summary.module.scss
@@ -41,3 +41,7 @@ ul.toc {
   text-align: center;
   @include margin(32, top bottom);
 }
+
+.resource {
+  @include margin(64, bottom);
+}
